--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                 return (
                     <div className="min-h-screen bg-neutral-900 text-gray-200 p-4 md:p-8 flex justify-center">
                         <div className="w-full max-w-4xl space-y-6">
-                            <h1 className="text-4xl font-spooky text-red-600 text-center drop-shadow-lg">MA SÓI GM TOOL</h1>
+                            <h1 className="text-4xl font-spooky text-red-600 text-center drop-shadow-lg">WEB QUẢN MA SÓI CỦA NEM NƯỚNG</h1>
                             
                             <div className="grid md:grid-cols-2 gap-6">
                                 <div className="bg-neutral-800 p-4 rounded-xl border border-neutral-700">
@@ -622,3 +622,4 @@
     </script>
 </body>
 </html>
+
